--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Ignore node_modules
 node_modules/
+node_modules
+/node_modules/
 # Ignore only the specific file
 node_modules/@next/swc-win32-x64-msvc/next-swc.win32-x64-msvc.node
