--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ node_modules
 /node_modules/
 # Ignore only the specific file
 node_modules/@next/swc-win32-x64-msvc/next-swc.win32-x64-msvc.node
+node_modules/@next/swc-win32-x64-msvc/
